--- a/Folder/Inner/index.html
+++ b/Folder/Inner/index.html
@@ -13,7 +13,7 @@
     dolore, obcaecati tempora accusantium provident exercitationem a reiciendis sequi, ipsa quos odit voluptatum facere
     qui.
   </p>
-  <img src="/main/img/blue.png" alt="absolute path">
+  <img src="https://github.com/RegalisImmundus/Project-alpha/main/png/blue.png" alt="absolute path">
   <img src="../../img/red.png" alt="relative path">
 </body>
 
